add vault namespace

--- a/manifest/hashicorp-vault/base/vault-application.yaml
+++ b/manifest/hashicorp-vault/base/vault-application.yaml
@@ -25,6 +25,4 @@ spec:
         ui:
           enabled: true
   project: gitops-config
-  syncPolicy:
-    syncOptions:
-      - CreateNamespace=true
+  syncPolicy: {}
