--- a/openshift-gitops-operator/overlays/kustomization.yaml
+++ b/openshift-gitops-operator/overlays/kustomization.yaml
@@ -13,3 +13,8 @@ patchesJson6902:
       version: v1alpha1
       group: argoproj.io
     path: argocd.yaml
+
+resources:
+  - vault-namespace.yaml
+  - vault-plugin-sa.yaml
+  
