--- a/gitops-config-manager/overlays/patch-vault-plugin.yaml
+++ b/gitops-config-manager/overlays/patch-vault-plugin.yaml
@@ -12,7 +12,7 @@
           value: vplugin
         - name: AVP_TYPE
           value: vault
-        - name: AVP_VAULT_ADDR
+        - name: VAULT_ADDR
           value: 'http://vault-server.vault.svc.cluster.local:8200'
         - name: AVP_AUTH_TYPE
           value: k8s
