--- a/gitops-config-manager/overlays/kustomization.yaml
+++ b/gitops-config-manager/overlays/kustomization.yaml
@@ -3,7 +3,7 @@ kind: Kustomization
 
 bases:
   - ../base
-  - ../../manifest/argocd/vplugin-secrets/notifications-secret/overlays
+  - ../../secret-manager/base
 
 patchesJson6902:
   - target:
@@ -11,5 +11,5 @@ patchesJson6902:
       name: gitops-config-manager
       version: v1alpha1
       group: argoproj.io
-    path: patch-vault-plugin.yaml
+    path: patch-slack-subscription.yaml
   
