add secret-manager to bases:

--- a/secret-manager/base/secret-manager.yaml
+++ b/secret-manager/base/secret-manager.yaml
@@ -19,8 +19,8 @@ spec:
           value: vplugin
         - name: AVP_TYPE
           value: vault
-        - name: VAULT_ADDR
-          value: 'http://vault-server.vault.svc.cluster.local:8200'
+        - name: AVP_VAULT_ADDR
+          value: 'http://vault-server.vault.srv.cluster.local:8200'
         - name: AVP_AUTH_TYPE
           value: k8s
 
