--- a/gitops-config-manager/overlays/patch-slack-subscription.yaml
+++ b/gitops-config-manager/overlays/patch-slack-subscription.yaml
@@ -3,3 +3,7 @@
   value:
     notifications.argoproj.io/subscribe.on-sync-succeeded.slack: "jarvis-test"
 
+- op: add
+  path: /metadata/annotations
+  value:
+    notifications.argoproj.io/subscribe.on-sync-failed.slack: "jarvis-test"
