--- a/manifest/argocd/vplugin-secrets/notifications-secret/base/notification-secret.yaml
+++ b/manifest/argocd/vplugin-secrets/notifications-secret/base/notification-secret.yaml
@@ -4,5 +4,8 @@ kind: Secret
 metadata:
   name: argocd-notifications-secret
   namespace: openshift-gitops
-stringData: {}
+  annotations:
+    avp.kubernetes.io/path: "secret/data/vplugin/slacktoken"
+stringData: 
+  slack-token: <slack-token>
 type: Opaque
