--- a/cluster-config-manager/base/kustomization.yaml
+++ b/cluster-config-manager/base/kustomization.yaml
@@ -4,6 +4,7 @@ kind: Kustomization
 bases:
   - ../../manifest/argocd/project/gitops-config/base
 
+
 resources:
-  - gitops-config-manager.yaml
+  - cluster-config-manager.yaml
   
