--- a/manifest/argocd/apps/sealed-secret/base/sealed-secret.yaml
+++ b/manifest/argocd/apps/sealed-secret/base/sealed-secret.yaml
@@ -4,7 +4,7 @@ metadata:
   name: sealed-secrets
   namespace: kubeseal
 spec:
-  project: gitops-config
+  project: cluster-config
   source:
     chart: sealed-secrets
     repoURL: https://bitnami-labs.github.io/sealed-secrets
