--- a/manifest/argocd/apps/sealed-secret/base/sealed-secret.yaml
+++ b/manifest/argocd/apps/sealed-secret/base/sealed-secret.yaml
@@ -3,6 +3,8 @@ kind: Application
 metadata:
   name: sealed-secrets
   namespace: kubeseal
+  labels:
+    argocd.argoproj.io/managed-by=openshift-gitops
 spec:
   project: cluster-config
   source:
