--- a/manifest/argocd/apps/sealed-secret/base/sealed-secret.yaml
+++ b/manifest/argocd/apps/sealed-secret/base/sealed-secret.yaml
@@ -2,9 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: sealed-secrets
-  namespace: kubeseal
-  labels:
-    argocd.argoproj.io/managed-by=openshift-gitops
+  namespace: openshift-gitops
 spec:
   project: cluster-config
   source:
