--- a/manifest/argocd/apps/calert/base/kustomization.yaml
+++ b/manifest/argocd/apps/calert/base/kustomization.yaml
@@ -2,6 +2,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - sealed-secret.yaml
-  
-
+  - calert-app.yaml
+  - calert-secret.yaml
