--- a/manifest/argocd/apps/sealed-secret/base/sealed-secret.yaml
+++ b/manifest/argocd/apps/sealed-secret/base/sealed-secret.yaml
@@ -11,9 +11,15 @@ spec:
     targetRevision: 2.2.0
     helm:
       releaseName: sealed-secrets
+      values: |
+        Args:
+          - '--update-status'
+        readinessProbe:
+          initialDelaySeconds: 10s
+        podSecurityContext:
+          fsGroup:
+        containerSecurityContext:
+          runAsUser:
   destination:
     server: "https://kubernetes.default.svc"
-    namespace: kubeseal
-  syncPolicy:
-    syncOptions:
-      - CreateNamespace=true
+    namespace: sealed-secret
