--- a/manifest/argocd/project/cluster-config/base/kustomization.yaml
+++ b/manifest/argocd/project/cluster-config/base/kustomization.yaml
@@ -3,7 +3,7 @@ kind: Kustomization
 
 bases:
   - ../../../apps/sealed-secret/base
-  - ../../../apps/calert/base
+  - ../../../apps/argocd-helm/base
 resources:
   - cluster-config.yaml
 
