--- a/cluster-config-manager/base/kustomization.yaml
+++ b/cluster-config-manager/base/kustomization.yaml
@@ -1,10 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-bases:
-  - ../../manifest/argocd/project/cluster-config/base
-
 
 resources:
   - cluster-config-manager.yaml
+  - clusterrolebinding.yaml
   
