--- a/manifest/argocd/apps/argocd-helm/base/kustomization.yaml
+++ b/manifest/argocd/apps/argocd-helm/base/kustomization.yaml
@@ -3,6 +3,4 @@ kind: Kustomization
 
   
 resources:
-  - argocd.yaml
-  - argocd-admingrp.yaml
-  - clusterrolebinding.yaml
+  - argocd-server.yaml
