--- a/manifest/argocd/apps/sealed-secret/base/sealed-secret.yaml
+++ b/manifest/argocd/apps/sealed-secret/base/sealed-secret.yaml
@@ -22,4 +22,4 @@ spec:
           runAsUser:
   destination:
     server: "https://kubernetes.default.svc"
-    namespace: sealed-secret
+    namespace: openshift-gitops
