fix typo + deploy custom argo

--- a/manifest/argocd/apps/sealed-secret/base/sealed-secret.yaml
+++ b/manifest/argocd/apps/sealed-secret/base/sealed-secret.yaml
@@ -15,7 +15,7 @@ spec:
         Args:
           - '--update-status'
         readinessProbe:
-          initialDelaySeconds: 10s
+          initialDelaySeconds: 10
         podSecurityContext:
           fsGroup:
         containerSecurityContext:
