--- a/manifest/argocd/apps/argocd-helm/overlays/kustomization.yaml
+++ b/manifest/argocd/apps/argocd-helm/overlays/kustomization.yaml
@@ -5,4 +5,10 @@ bases:
   - ../base
 
 
-
+patchesJson6902:
+  - target:
+      group: argoproj.io
+      version: v1alpha1
+      kind: Application
+      name: argocd
+    path: patch-argocd-server.yaml
