--- a/manifest/argocd/apps/argocd-helm/overlays/patch-argocd-server.yaml
+++ b/manifest/argocd/apps/argocd-helm/overlays/patch-argocd-server.yaml
@@ -1,81 +1,10 @@
 - op: add
-  path: /spec/repo/-
+  path: /spec/source/helm
   value:
-    env:
-      - name: HELM_PLUGINS
-        value: /custom-tools/helm-plugins/
-      - name: HELM_SECRETS_HELM_PATH
-        value: /usr/local/bin/helm
-      - name: HELM_SECRETS_SOPS_PATH
-        value: /custom-tools/sops
-      - name: HELM_SECRETS_KUBECTL_PATH
-        value: /custom-tools/kubectl
-      - name: HELM_SECRETS_CURL_PATH
-        value: /custom-tools/curl
-      - name: HELM_SECRETS_VALUES_ALLOW_SYMLINKS
-        value: 'false'
-      - name: HELM_SECRETS_VALUES_ALLOW_ABSOLUTE_PATH
-        value: 'false'
-      - name: HELM_SECRETS_VALUES_ALLOW_PATH_TRAVERSAL
-        value: 'false'
-    initContainers:
-      - args:
-          - >
-            mkdir -p /custom-tools/helm-plugins
-
-            wget -qO-
-            https://github.com/jkroepke/helm-secrets/releases/download/v${HELM_SECRETS_VERSION}/helm-secrets.tar.gz
-            | tar -C /custom-tools/helm-plugins -xzf-;
-
-
-            wget -qO /custom-tools/sops
-            https://github.com/mozilla/sops/releases/download/v${SOPS_VERSION}/sops-v${SOPS_VERSION}.linux
-
-            wget -qO /custom-tools/kubectl
-            https://dl.k8s.io/release/v${KUBECTL_VERSION}/bin/linux/amd64/kubectl
-
-            wget -qO /custom-tools/curl
-            https://github.com/moparisthebest/static-curl/releases/latest/download/curl-amd64
-            \
-
-
-            chmod +x /custom-tools/*
-        command:
-          - sh
-          - '-ec'
-        env:
-          - name: HELM_SECRETS_VERSION
-            value: 3.12.0
-          - name: SOPS_VERSION
-            value: 3.7.1
-          - name: KUBECTL_VERSION
-            value: 1.22.0
-        image: 'alpine:latest'
-        name: download-tools
-        volumeMounts:
-          - mountPath: /custom-tools
-            name: custom-tools
-    resources:
-      limits:
-        cpu: '1'
-        memory: 1Gi
-      requests:
-        cpu: 250m
-        memory: 256Mi
-    volumeMounts:
-      - mountPath: /custom-tools
-        name: custom-tools
-      - mountPath: /helm-secrets-private-keys/
-        name: helm-secrets-private-keys
-      - mountPath: /helm-values
-        name: helm-values
-      - mountPath: 
-    volumes:
-      - emptyDir: {}
-        name: custom-tools
-      - name: helm-secrets-private-keys
-        secret:
-          secretName: helm-secrets-private-keys
-      - name: helm-values
-        secret:
-          secretName: helm-values
+    values: |
+      nameOverride: custom-argo
+      global:
+        securityContext:
+          runAsUser:
+          fsGroup:
+          runAsGroup:
