add volumeMounts for sealed helm values

--- a/manifest/argocd/apps/argocd-helm/overlays/patch-argocd-server.yaml
+++ b/manifest/argocd/apps/argocd-helm/overlays/patch-argocd-server.yaml
@@ -8,3 +8,12 @@
           runAsUser:
           fsGroup:
           runAsGroup:
+      repoServer:
+        volumeMounts:
+          - name: helm-values
+            mountPath: /helm-values
+        volumes:
+          - name: helm-values
+            secret:
+              secretName: helm-values
+            
