--- a/manifest/argocd/apps/argocd-manager/base/argocd-manager.yaml
+++ b/manifest/argocd/apps/argocd-manager/base/argocd-manager.yaml
@@ -11,4 +11,4 @@ spec:
   source:
     path: manifest/argocd/apps/argocd-helm/overlays
     repoURL: https://github.com/StinkyBenji/hands-on-openshift-gitops
-    targetRevision: master
+    targetRevision: main
