--- a/manifest/argocd/apps/argocd-helm/overlays/patch-argocd-server.yaml
+++ b/manifest/argocd/apps/argocd-helm/overlays/patch-argocd-server.yaml
@@ -16,4 +16,6 @@
           - name: helm-values
             secret:
               secretName: helm-values
-            
+      server:
+        route:
+          enabled: true     
