--- a/manifest/argocd/project/cluster-apps/base/kustomization.yaml
+++ b/manifest/argocd/project/cluster-apps/base/kustomization.yaml
@@ -1,6 +1,10 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+bases:
+  - ../../../apps/sealed-secret/base
+  - ../../../apps/argocd-helm/overlays
+
 resources:
   - cluster-config.yaml
 
