--- a/manifest/argocd/project/cluster-apps/base/kustomization.yaml
+++ b/manifest/argocd/project/cluster-apps/base/kustomization.yaml
@@ -4,6 +4,7 @@ kind: Kustomization
 bases:
   - ../../../apps/sealed-secret/base
   - ../../../apps/argocd-helm/overlays
+  - ../../../apps/calert/base
 
 resources:
   - cluster-apps.yaml
