--- a/manifest/argocd/apps/calert/base/apps/calert.yaml
+++ b/manifest/argocd/apps/calert/base/apps/calert.yaml
@@ -14,6 +14,10 @@ spec:
         app: calert
         deploymentconfig: calert
     spec:
+      serviceAccount: default
+      restartPolicy: Always
+      enableServiceLinks: true
+      serviceAccountName: default
       volumes:
         - name: calert-config
           configMap:
